[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/screens/upgrade_screen.gd" id="1"]

[node name="UpgradeScreen" type="CanvasLayer"]
script = ExtResource("1")
visible = false

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Choose an Upgrade"
horizontal_alignment = 1

[node name="Options" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="ButtonA" type="Button" parent="Panel/VBox/Options"]
layout_mode = 2
text = "Option A"

[node name="ButtonB" type="Button" parent="Panel/VBox/Options"]
layout_mode = 2
text = "Option B"

[node name="ButtonC" type="Button" parent="Panel/VBox/Options"]
layout_mode = 2
text = "Option C"
